Edited a handful of css for margin and spacing issues

--- a/waverly-inn/src/App.css
+++ b/waverly-inn/src/App.css
@@ -80,7 +80,11 @@ h6 {
 .AboutContainer{
   display: flex;
   justify-content: center;
-  margin: 40px 50px;
+  /* margin: 40px 50px; */
+}
+
+.AboutContainer > .rightSide {
+  margin: 25px 0;
 }
 
 .menu {
@@ -137,7 +141,8 @@ h6 {
 .menu-section-title {
   width: 1066px;
   text-align: left;
-  
+  margin-top: 2em;
+  /* margin-bottom: -0.1em; */
 }
 
 .selected {
@@ -155,11 +160,13 @@ h6 {
 
  .rightSide > p {
   line-height: 32px;
+  margin-left: 40px;
 }
 
 
  .hours{
-   margin-top: 59px;
+   /* margin-top: 59px; */
+
  }
  
  .border{
@@ -169,7 +176,7 @@ h6 {
   justify-content: center;
   align-items: center; */
   max-width: 1300px;
-  margin: 0 auto;
+  margin: 30px auto;
  }
  .imgClass2{
   width: 636px;
@@ -179,12 +186,14 @@ h6 {
 .contactContainer{
   display: flex;
   justify-content: space-between;
-  margin: 40px 20px;
+  /* margin: 40px 20px; */
 }
-.contactContainer > div{
+.contactContainer > h4 {
+  margin-top: 0;
+}
+/* .contactContainer > div{
 
-  margin-bottom: 61px;
-}
+} */
 .contactLeft{
   width: 347px;
   height: 120px;
@@ -284,6 +293,7 @@ footer {
   justify-content: space-evenly;
   color: white;
   padding: 35px;
+  text-align: left;
 }
 
 .copyright {
@@ -351,6 +361,9 @@ footer {
   .menu-section-title {
     width: 708px;
   }
+  .border{
+    margin: 0 auto;
+   }
   .AboutContainer {
     display: flex;
     flex-direction: column;
@@ -362,6 +375,7 @@ footer {
   }
   .contactContainer > .rightSide {
     order: 2;
+    margin: 30px 0;
   }
   .rightSide {
     max-width: 600px;
@@ -376,6 +390,9 @@ footer {
   }
   .rightSide > h4 {
     width: 300px;
+  }
+  .rightSide > p {
+    margin: 0;
   }
   .leftSide {
     margin: 0;
